fix: scrollbar bg

--- a/src/components/CodeEditor/index.module.less
+++ b/src/components/CodeEditor/index.module.less
@@ -1,7 +1,3 @@
-.scroll {
-  color: #000;
-}
-
 .nav {
   width: 100%;
   padding: 0 16px;
